[tool.poetry]
name = "jug"
version = "0.1.0"
description = ""
authors = ["Mukilan Krishnakumar <mukilan.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.279"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
