[tool.poetry]
name = "jug"
version = "0.1.0"
description = ""
authors = ["Mukilan Krishnakumar <mukilan.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.6"
langchain = "^0.0.279"
streamlit = "^1.26.0"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
